Use default variant if we can't find any variants

We use to crash here trying to get the first element of an empty GPtrArray.

https://bugzilla.gnome.org/show_bug.cgi?id=660586